@startuml
skinparam monochrome true
skinparam classAttributeIconSize 0

package "vending" {
  class VendingMachine {
    -state: State
    -snacks: Map<String, Snack>
    -handler: SnackDispenseHandler
    +selectSnack(name)
    +insertMoney(amount)
    +dispense()
  }

  class Snack {
    -name: String
    -price: double
    -quantity: int
    +isAvailable(): boolean
  }
}

package "vending.state" {
  interface State {
    +selectSnack(name)
    +insertMoney(amount)
    +dispense()
  }

  class IdleState
  class WaitingForMoneyState
  class DispensingState
}

package "vending.chain" {
  abstract class SnackDispenseHandler {
    -next: SnackDispenseHandler
    +setNext(handler)
    +handle(request)
  }

  class SnackRequest {
    +name: String
    +amount: double
  }

  class CokeHandler
  class PepsiHandler
  class CheetosHandler
  class DoritosHandler
  class KitKatHandler
  class SnickersHandler
}

package "vending.setup" {
  class HandlerChainBuilder {
    +buildDefaultChain()
  }
  class SnackInventory {
    +createDefaultInventory()
  }
  class VendingMachineFactory {
    +createDefault()
  }
}

VendingMachine --> State
VendingMachine --> SnackDispenseHandler : handler
VendingMachine --> "*" Snack
State <|.. IdleState
State <|.. WaitingForMoneyState
State <|.. DispensingState
SnackDispenseHandler <|-- CokeHandler
SnackDispenseHandler <|-- PepsiHandler
SnackDispenseHandler <|-- CheetosHandler
SnackDispenseHandler <|-- DoritosHandler
SnackDispenseHandler <|-- KitKatHandler
SnackDispenseHandler <|-- SnickersHandler
SnackDispenseHandler o--> SnackDispenseHandler : next
SnackDispenseHandler --> SnackRequest

VendingMachineFactory --> VendingMachine : creates
VendingMachineFactory --> SnackInventory : uses
VendingMachineFactory --> HandlerChainBuilder : uses

IdleState --> WaitingForMoneyState : selectSnack()
WaitingForMoneyState --> DispensingState : insertMoney()
DispensingState --> IdleState : dispense()

@enduml
